Deployments/Microservices/Istio/Examples/Networking/primary-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: primary-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    #Ingress Gateway DNS host of Primary Cluster
    - "primary-mesh.internal.wkshpdev.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: primary-virtual-service
spec:
  hosts:
  #Ingress Gateway DNS host of Primary Cluster
  - "primary-mesh.internal.wkshpdev.com"
  gateways:
  - primary-gateway
  http:
  - match:
    - uri:
        prefix: /podinfo
    rewrite:
      uri: /
    route:
    - destination:
        host: podinfo   
        subset: blue
        port:
          number: 9898 
      weight: 100
      
#UNCOMMENT: Test Blue/Green
    # - destination:
    #     host: podinfo  
    #     subset: green 
    #     port:
    #       number: 9898 
    #   weight: 0
  - match:  
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld
        subset: v1
        port:
          number: 5000   
      weight: 100

#UNCOMMENT: Test Traffic Shifting
    # - destination:
    #     host: helloworld
    #     subset: v2
    #     port:
    #       number: 5000   
    #   weight: 0

#UNCOMMENT: Test Traffic Mirroring Or Shadowing
    # mirror:
    #   host: "seocndsry-mesh.<dns-name>"
    #   port:
    #     number: 80
    # mirrorPercentage:
    #   value: 100

#UNCOMMENT: Test Circuit Breaking
  # - match:
  #   - uri:
  #       prefix: /httpbin
  #   rewrite:
  #     uri: / 
  #   route:
  #   - destination:
  #       host: httpbin
  #       port:
  #         number: 8000

#Bookinfo service
  - match:
    - uri:
        exact: /product
    rewrite:
      uri: /productpage 
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - match:  
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
